# ea-djangoresful-nuxt-tailwind

./: .gitignore
backend/: pyproject.toml
frontend/: nuxt.config.js  package.json  tailwind.config.js
frontend/components/: FootBar.vue  HomeBanner.vue  LangSelect.vue  NavBar.vue  Quate.vue  Quote.vue  SideBar.vue
frontend/components/baseComponents/: VacationCard.vue
frontend/components/svg/: Logo.vue
frontend/lang/: en.js  zh-Hans.js
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/pages/about/: index.vue
frontend/pages/blog/: index.vue
frontend/pages/products/: _id.vue  index.vue
frontend/pages/support/: index.vue
